# up1_common

./: README.md
up1_common/: CMakeLists.txt  package.xml
up1_control/: CMakeLists.txt  package.xml
up1_control/config/: arm_poses.yaml  control.yaml  up1_control.yaml  xbox.config.yaml
up1_control/include/: teleop_eef_joy.h
up1_control/launch/: cmdr_joy.launch  control.launch  dual_arm_control.launch  mono_arm_control.launch  teleop.launch  teleop_arm_joy.launch  teleop_arm_key.launch  teleop_demo.launch  teleop_eef_joy.launch  teleop_twist_joy.launch  teleop_twist_key.launch  up1_control.launch
up1_control/launch/old_stuff/: teleop_twist_joy.launch  teleop_twist_key.launch
up1_control/scripts/: cycle_poses  moveit_joy  random_pose  sequence  set_pose  square  teleop_gripper_joy  teleop_twist_joy
up1_control/src/: gripper.cpp  ik_test.cpp  random.cpp  teleop_eef_joy.cpp
up1_description/: CMakeLists.txt  README.md  package.xml  up1.gv
up1_description/config/: modules.yaml
up1_description/launch/: description.launch  display.launch  xacrodisplay.launch
up1_description/meshes/base/: base_viz.dae  base_viz.stl  wheel_right.stl  wheel_right_viz.stl
up1_description/meshes/mono_arm/: armlink1.stl  armlink2.stl  armlink3.stl  armlink4.stl  armlink5.stl  armroot.stl  base.stl  camera.stl  finger.stl  finger_right.stl  finger_right_viz.stl  io.stl  wheel.stl
up1_description/robots/: up1_right_arm.xacro  up1_two_arms.xacro
up1_description/scripts/: generate_left_arm_ikfast.sh  generate_right_arm_ikfast.sh  generate_urdf.sh
up1_description/urdf/: .gitignore  common.gazebo.xacro  common.xacro  ikfast_up1_left_arm.cpp  up1.urdf  up1.xacro  up1_dual_arm_module.xacro  up1_left_arm.urdf  up1_left_arm.xacro  up1_mono.urdf  up1_right_arm.urdf  upload_up1.launch
up1_description/urdf/arm_module/: arm.xacro  right_arm_module.xacro
up1_description/urdf/base_module/: base_module.xacro  wheel.xacro
up1_description/urdf/dual_arm_module/: arm.gazebo.xacro  gripper.gazebo.xacro  left_arm_module.xacro  two_arm_module.xacro
up1_description/urdf/io_module/: camera.xacro  io_module.gazebo.xacro  io_module.xacro
up1_description/urdf/manipulator_module/dual_arm_module/: arm.gazebo.xacro  arm.transmission.xacro  arm.xacro  arm_module.gazebo.xacro  arm_root_link.xacro  dual_arm_module.xacro  gripper.transmission.xacro  gripper.xacro  left_arm_group.xacro  left_arm_module.xacro  right_arm_group.xacro  right_arm_module.xacro
up1_description/urdf/manipulator_module/mono_arm_module/: arm.gazebo.xacro  arm.xacro  arm_module.gazebo.xacro  arm_root.xacro  arm_root_link.xacro  finger.gazebo.xacro  finger.transmission.xacro  finger.xacro  gripper.gazebo.xacro  gripper.xacro  mono_arm_module.xacro
up1_description/urdf/mono_arm_module/: two_arm_module.xacro
up1_description/xacro/: common.gazebo.xacro  common.xacro  up1.xacro  up1_left_arm.xacro  up1_mono_arm.xacro  up1_right_arm.xacro  up1_two_arms.xacro
up1_description/xacro/base_module/: base_module.gazebo.xacro  base_module.xacro  wheel.xacro
up1_description/xacro/dual_arm_module/: arm.transmission.xacro  arm.xacro  gripper.transmission.xacro  gripper.xacro  left_arm_module.xacro  right_arm_module.xacro  two_arm_module.xacro
up1_description/xacro/io_module/: camera.xacro  io_module.xacro
up1_description/xacro/manipulator_module/dual_arm_module/: arm.xacro  gripper.xacro  left_arm_module.xacro  right_arm_module.xacro  two_arm_module.xacro
up1_description/xacro/manipulator_module/mono_arm_module/: arm.xacro  arm_module.gazebo.xacro  mono_arm_module.xacro
up1_description/xacro/mono_arm_module/: arm.xacro  gripper.xacro  left_arm_module.xacro  mono_arm_module.xacro  right_arm_module.xacro  two_arm_module.xacro
up1_left_arm_kinematics/: CMakeLists.txt  package.xml  up1_left_arm_group_moveit_ikfast_plugin_description.xml  up1_left_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
up1_left_arm_kinematics/src/: up1_left_arm_group_ikfast_moveit_plugin.cpp  up1_left_arm_ikfast_moveit_plugin.cpp  up1_left_arm_ikfast_solver.cpp
up1_mono_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
up1_mono_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  up1.srdf
up1_mono_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  up1_moveit_controller_manager.launch.xml  warehouse.launch
up1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
up1_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  up1.srdf
up1_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo2.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  up1_moveit.launch  up1_moveit_controller_manager.launch.xml  up1_moveit_planning_execution.launch  warehouse.launch
up1_right_arm_kinematics/: CMakeLists.txt  package.xml  up1_right_arm_group_moveit_ikfast_plugin_description.xml  up1_right_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
up1_right_arm_kinematics/src/: up1_right_arm_group_ikfast_moveit_plugin.cpp  up1_right_arm_group_ikfast_solver.cpp  up1_right_arm_ikfast_moveit_plugin.cpp  up1_right_arm_ikfast_solver.cpp
up1_teleop/launch/: teleop_arm_joy.launch  teleop_twist_joy.launch
