<?xml version="1.0"?>
<package>
  <name>up1_control</name>
  <version>0.1.0</version>
  <description>UpDroid UP1 control configuration</description>

  <maintainer email="mike@updroid.com">Mike Lewis</maintainer>

  <license>BSD</license>

  <url type="website">http://www.updroid.com</url>
  <url type="repository">http://bitbucket.org/updroid/up1_common</url>

  <author email="mike@updroid.com">Mike Lewis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>

  <export>
  </export>
</package>
